# efb-wechat-mprss

./: README.md  config.example.yaml  pyproject.toml
backend/: app.py  data_loader.py  db_reader.py
frontend/: __init__.py  index.html  style.css
mprss/: app.py  data_loader.py  db_reader.py  opml_generator.py  rss_generator.py
